--- a/samples/SessionLoginSample/SessionLoginSample/en.lproj/SLViewController_iPhone.xib
+++ b/samples/SessionLoginSample/SessionLoginSample/en.lproj/SLViewController_iPhone.xib
@@ -192,7 +192,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">JLViewController</string>
+				<string key="-1.CustomClassName">SLViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
